--- a/src/less/download-cn.less
+++ b/src/less/download-cn.less
@@ -117,7 +117,8 @@
         }
     }
 
-    .form {
+    .form,
+    .feedback {
         max-width: @maxWidth;
         margin: @marginEqual;
         background-color: @M2;
@@ -134,6 +135,12 @@
                 .linux-icon {
                     height: 40px;
                     margin-left: 2rem;
+                }
+
+                .check-icon {
+                    width: 25px;
+                    height: 25px;
+                    margin-right: 1rem;
                 }
             }
         }
@@ -154,6 +161,27 @@
                 }
             }
         }
+
+        .wrong-tips {
+            display: none;
+            text-align: left;
+            font-size: @p1;
+            color: @T3;
+        }
+
+        .feedback-desc {
+            font-size: @p1;
+            color: @B4;
+            text-align: left;
+
+            a {
+                color: @B1;
+            }
+        }
+    }
+
+    .feedback-wrapper {
+        display: none;
     }
 
     button {
@@ -168,6 +196,6 @@
     }
 
     .submit {
-        width: 100px;
+        width: 150px;
     }
 }
