--- a/layouts/download-cn/community.html
+++ b/layouts/download-cn/community.html
@@ -22,27 +22,69 @@
         <div class="form-field">
             <div class="columns is-multiline is-variable is-8">
                 <div class="column is-6">
-                    <div class="field">
-                        <div class="control">
-                            <input class="input" type="text" placeholder="Text input">
+                    <div class="dropdown version">
+                        <div class="dropdown-trigger">
+                            <button class="button" aria-haspopup="true" aria-controls="dropdown-menu">
+                                <span id="version">选择 TiDB 版本</span>
+                            </button>
+                        </div>
+                        <div class="dropdown-menu" id="dropdown-menu" role="menu">
+                            <div class="dropdown-content">
+                                <div class="dropdown-item">
+                                    v4.0.0
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
+                <div class="column is-6"></div>
                 <div class="column is-6">
-                    <div class="field">
-                        <div class="control">
-                            <input class="input" type="text" placeholder="Text input">
+                    <div class="dropdown package">
+                        <div class="dropdown-trigger">
+                            <button class="button" aria-haspopup="true" aria-controls="dropdown-menu">
+                                <span id="package">选择软件下载包</span>
+                            </button>
                         </div>
-                    </div>
-                </div>
-                <div class="column is-6">
-                    <div class="field">
-                        <div class="control">
-                            <input class="input" type="text" placeholder="Text input">
+                        <div class="dropdown-menu" id="dropdown-menu" role="menu">
+                            <div class="dropdown-content">
+                                <div class="dropdown-item">
+                                    tidb-enterprise-server
+                                </div>
+                                <div class="dropdown-item">
+                                    tidb-enterprise-toolkit
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
+            <div class="wrong-tips">错误提示：<span class="tips"></span></div>
+        </div>
+    </div>
+
+    <div class="download-wrapper">
+        <div class="field protocol">
+            <div class="control">
+                <label class="checkbox" onclick="clickbox()">
+                    <input type="checkbox" id="protocol-checked">
+                    我同意<a href="/licenses"> PingCAP 社区软件许可协议</a>并接受邮件联系。
+                </label>
+            </div>
+        </div>
+
+        <div class="download-btn">
+            <a href="/" download="tidb-enterprise-server" class="allow-download"><button onclick="download()"
+                    class="button">下载</button></a>
+            <button onclick="download()" class="disallow-download button">下载</button>
+        </div>
+    </div>
+
+    <div class="more-info">
+        <div class="title">查看更多信息</div>
+        <div class="items">
+            <p><a href="/docs-cn/stable/production-deployment-using-tiup/">如何安装</a></p>
+            <p><a href="/docs-cn/stable/upgrade-tidb-using-tiup/">如何升级</a></p>
+            <p><a href="/docs-cn/stable/releases/release-4.0.0-rc.2/">Release Note</a></p> 
         </div>
     </div>
 
@@ -56,5 +98,79 @@
         threshold: 200,
         effect: "fadeIn"
     });
+</script>
+<script type="text/javascript">
+    function validateForm() {
+        $('.wrong-tips').css('display', 'none')
+        const version = $('#version')[0].innerText
+        const package = $('#package')[0].innerText
+        const boxChecked = $("#protocol-checked").prop('checked')
+        $('.tips')[0].innerText = ''
+        let errArr = []
+        if (version == '选择 TiDB 版本') {
+            errArr.push('请选择 TiDB 版本')
+        }
+
+        if (package == '选择软件下载包') {
+            errArr.push('请选择下载软件包')
+        }
+
+        if (!boxChecked) {
+            errArr.push('必须同意 PingCAP 社区软件许可协议')
+        }
+
+        if (errArr.length == 0) {
+            $('.allow-download').css('display', 'block')
+            $('.disallow-download').css('display', 'none')
+        } else {
+            $('.allow-download').css('display', 'none')
+            $('.disallow-download').css('display', 'initial')
+        }
+        return errArr
+    }
+
+    function download() {
+        const errMsg = validateForm()
+
+        if (errMsg.length != 0) {
+            $('.wrong-tips').css('display', 'block')
+            $('.wrong-tips .tips').append(
+                errMsg.map(e => '<span>' + e + '</span>').join('，')
+            )
+        }
+    }
+
+    function clickbox() {
+        validateForm()
+    }
+
+    $(document).ready(function () {
+        $('.dropdown').click(function () {
+            $(this).toggleClass('is-active')
+        })
+
+        $('.version .dropdown-item').click(function () {
+            $('#version')[0].innerText = $(this)[0].innerText
+            validateForm()
+        })
+
+        $('.package .dropdown-item').click(function () {
+            $('#package')[0].innerText = $(this)[0].innerText
+            switch ($(this)[0].innerText) {
+                case "tidb-enterprise-server":
+                    $('.allow-download').attr('href', 'tidb-enterprise-server')
+                    $('.allow-download').attr('download', 'tidb-enterprise-server')
+                    break;
+                case "tidb-enterprise-toolkit":
+                    $('.allow-download').attr('href', 'tidb-enterprise-toolkit')
+                    $('.allow-download').attr('download', 'tidb-enterprise-toolkit')
+                    break;
+                default:
+                    $('.allow-download').attr('href', '/')
+                    break;
+            }
+            validateForm()
+        })
+    })
 </script>
 {{- end -}}
