--- a/layouts/download-cn/list.html
+++ b/layouts/download-cn/list.html
@@ -28,7 +28,7 @@
                                 <li>极速便捷安装</li>
                                 <li>用户社区 <a href="https://asktug.com/" target="_blank">AskTUG</a></li>
                             </ul>
-                            <div class="more">了解更多 TiDB 信息新一代分布式，HTAP 数据库</div>
+                            <div class="more"><a href="/docs-cn/stable/">了解更多 TiDB 信息新一代分布式，HTAP 数据库</a></div>
                         </div>
                     </div>
                     <a href="/download-cn/community">
