data: update contents

--- a/layouts/download-cn/list.html
+++ b/layouts/download-cn/list.html
@@ -52,7 +52,7 @@
                                 <li>企业级别服务支持</li>
                                 <li>全面加强的安全特性</li>
                             </ul>
-                            <div class="more">了解更多 TiDB 客户解决方案</div>
+                            <div class="more"><a href="/cases-cn/">了解更多 TiDB 客户解决方案</a></div>
                         </div>
                     </div>
                     <a href="/download-cn/enterprise">
