--- a/layouts/download-cn/enterprise.html
+++ b/layouts/download-cn/enterprise.html
@@ -23,21 +23,21 @@
                     <div class="column is-6">
                         <div class="field">
                             <div class="control">
-                                <input class="input" id="name" name="name" type="text" placeholder="姓名" required>
+                                <input class="input" id="name" name="name" type="text" placeholder="姓名" autocomplete="off" required>
                             </div>
                         </div>
                     </div>
                     <div class="column is-6">
                         <div class="field">
                             <div class="control">
-                                <input class="input" id="phone" name="phone" type="text" placeholder="手机号码" required>
+                                <input class="input" id="phone" name="phone" type="text" placeholder="手机号码" autocomplete="off" required>
                             </div>
                         </div>
                     </div>
                     <div class="column is-6">
                         <div class="field">
                             <div class="control">
-                                <input class="input" id="company" name="company" type="text" placeholder="公司名称">
+                                <input class="input" id="company" name="company" type="text" placeholder="公司名称" autocomplete="off" required>
                             </div>
                         </div>
                     </div>
