--- a/src/less/download-cn.less
+++ b/src/less/download-cn.less
@@ -66,7 +66,12 @@
     .card {
         padding: 2rem 3rem;
         width: 100%;
-        height: 520px;
+        height: 550px;
+
+        @media only screen and (max-width: 414px) {
+            box-shadow: none;
+            background: transparent;
+        }
 
         .header {
             .rocket-icon {
@@ -153,6 +158,10 @@
                     height: 20px;
                     margin-right: 1rem;
                 }
+            }
+
+            .center {
+                justify-content: center;
             }
 
             .feedback-desc {
@@ -294,10 +303,10 @@
         p>a {
             color: @B1;
             font-size: @p2;
-            text-decoration: underline;
 
             &:hover {
                 color: @B1;
+                text-decoration: underline;
             }
         }
     }
@@ -383,7 +392,6 @@
 
                             .more {
                                 color: @B1;
-                                text-decoration: underline;
                                 position: relative;
                                 text-align: left;
                                 min-height: 3rem;
@@ -393,6 +401,7 @@
                                     color: @B1;
 
                                     &:hover {
+                                        text-decoration: underline;
                                         color: @B1;
                                     }
                                 }
