chore: update content

--- a/layouts/community-cn/high-performance-tidb-challenge.html
+++ b/layouts/community-cn/high-performance-tidb-challenge.html
@@ -83,7 +83,7 @@ High Performance TiDB Challenge
           </div>
         </div>
         <div class="subtitle">
-          性能竞赛题目分两种类型，分别为围绕固定场景的性能优化 和 解决高难度性能优化 issue。每个小组只能选择一个题目参加比赛，目前可选题目如下
+          性能竞赛题目分两种类型，分别为围绕固定场景的性能优化和解决高难度性能优化 issue。每个小组只能选择一个题目参加比赛，目前可选题目如下
         </div>
 
         <div class="scence-overview">
@@ -126,7 +126,7 @@ High Performance TiDB Challenge
           <div class="step-title">报名组队 （即日起至 2020.11.15）</div>
           <div class="detail">请仔细阅读「参赛须知」（github链接）并填写下方表单进行报名。一旦表单提交就不可以修改哦～</div>
           <a target="_blank" id="register-btn-step" href="https://forms.pingcap.com/f/high-performance-challenge-cn"
-            onclick="trackViews('step', 'hptc_form')"></a>>
+            onclick="trackViews('step', 'hptc_form')"></a>
           <button class="button">报名组队</button>
           </a>
         </div>
